--- a/client/src/scss/_btn.scss
+++ b/client/src/scss/_btn.scss
@@ -2,7 +2,7 @@
 .button{
   display: inline-block;
   background-color: $primary-color;
-  color: $white;
+  color: $white!important;
   border-radius: 20px;
   margin: 10px;
   padding: 8px 25px;
