--- a/client/src/app/public/create-suitcase/create-suitcase.component.html
+++ b/client/src/app/public/create-suitcase/create-suitcase.component.html
@@ -10,7 +10,8 @@
           <mat-icon matSuffix [ngClass]="selectedCategory === 'cleanliness' ? '': 'disabled-icon'" class="selection-icon" (click)="selectedCategory = 'cleanliness'" matTooltip="Aseo" [matTooltipPosition]="'below'">clean_hands</mat-icon>
           <mat-icon matSuffix [ngClass]="selectedCategory === 'medicines' ? '': 'disabled-icon'" class="selection-icon" (click)="selectedCategory = 'medicines'" matTooltip="Medicinas" [matTooltipPosition]="'below'">medical_services</mat-icon>
           <mat-icon matSuffix [ngClass]="selectedCategory === 'documents' ? '': 'disabled-icon'" class="selection-icon" (click)="selectedCategory = 'documents'" matTooltip="Documentos" [matTooltipPosition]="'below'">description</mat-icon>
-
+          <mat-icon matSuffix [ngClass]="selectedCategory === 'pet' ? '': 'disabled-icon'" class="selection-icon" (click)="selectedCategory = 'pet'" matTooltip="Mascota" [matTooltipPosition]="'below'">pets</mat-icon>
+          <mat-icon matSuffix [ngClass]="selectedCategory === 'baby' ? '': 'disabled-icon'" class="selection-icon" (click)="selectedCategory = 'baby'" matTooltip="Bebé" [matTooltipPosition]="'below'">baby_changing_station</mat-icon>
         </div>
         <mat-icon matSuffix [ngClass]="newItem ? '': 'disabled-icon'" class="clickable-icon" id="add-icon" (click)="addNewItem(newItem, itemForm.controls['newItem'])">add</mat-icon>
         <mat-error *ngIf="itemForm.controls['newItem']?.errors?.duplicated">El elemento ya se encuentra en la lista</mat-error>
@@ -71,52 +72,84 @@
           (onRemoveItem)="removeItemFromChild($event)">
         </my-suitcase-item-list>
 
+        <my-suitcase-item-list #baby
+           [itemList]="suggestionList.baby ? suggestionList.baby.items : []"
+           [maxShownList]="5"
+           [listName]="'baby'"
+           [subsubheaders]="subsubheaders"
+           (onAddItem)="addItemFromChild($event)"
+           (onRemoveItem)="removeItemFromChild($event)">
+        </my-suitcase-item-list>
+
+        <my-suitcase-item-list #pet
+           [itemList]="suggestionList.pet ? suggestionList.pet.items : []"
+           [maxShownList]="5"
+           [listName]="'pet'"
+           [subsubheaders]="subsubheaders"
+           (onAddItem)="addItemFromChild($event)"
+           (onRemoveItem)="removeItemFromChild($event)">
+        </my-suitcase-item-list>
+
       </div>
     </div>
 
     <div class="col-lg-4">
-      <div class="card">
+      <div class="card suitcase-card">
         <div class="card-header">
           <mat-icon matSuffix matTooltip="Suggestions" [matTooltipPosition]="'below'">backpack</mat-icon>
           <span>Elementos de mi maleta</span>
           <mat-icon aria-hidden="false" aria-label="Save the suitcase" id="save-icon" class="icon" [ngClass]="totalItemsInList > 0 ? '': 'disabled'" (click)="submitSuitcase()">save</mat-icon>
         </div>
-        <div *ngFor="let item of suitcaseList['tech']; let i=index" class="common-card-body">
+        <div *ngFor="let item of suitcaseShownList['tech']; let i=index" class="common-card-body">
           <div class="card-header card-subsubheader" *ngIf="showSubsubheader('tech', item.name)">
             <mat-icon matSuffix matTooltip="Tecnología" [matTooltipPosition]="'below'">photo_camera</mat-icon>
             <span>Tecnología</span>
           </div>
           <ng-container *ngTemplateOutlet="cardBody; context: { $implicit: item, i:i  };"></ng-container>
         </div>
-        <div *ngFor="let item of suitcaseList['cleanliness']; let i=index" class="common-card-body">
+        <div *ngFor="let item of suitcaseShownList['cleanliness']; let i=index" class="common-card-body">
           <div class="card-header card-subsubheader" *ngIf="showSubsubheader('cleanliness', item.name)">
             <mat-icon matSuffix matTooltip="Aseo" [matTooltipPosition]="'below'">clean_hands</mat-icon>
             <span>Aseo personal</span>
           </div>
           <ng-container *ngTemplateOutlet="cardBody; context: { $implicit: item, i:i  };"></ng-container>
         </div>
-        <div *ngFor="let item of suitcaseList['clothes']; let i=index" class="common-card-body">
+        <div *ngFor="let item of suitcaseShownList['clothes']; let i=index" class="common-card-body">
           <div class="card-header card-subsubheader" *ngIf="showSubsubheader('clothes', item.name)">
             <mat-icon matSuffix matTooltip="Ropa" [matTooltipPosition]="'below'">checkroom</mat-icon>
             <span>Ropa</span>
           </div>
           <ng-container *ngTemplateOutlet="cardBody; context: { $implicit: item, i:i  };"></ng-container>
         </div>
-        <div *ngFor="let item of suitcaseList['medicines']; let i=index" class="common-card-body">
+        <div *ngFor="let item of suitcaseShownList['medicines']; let i=index" class="common-card-body">
           <div class="card-header card-subsubheader" *ngIf="showSubsubheader('medicines', item.name)">
             <mat-icon matSuffix matTooltip="Medicinas" [matTooltipPosition]="'below'">medical_services</mat-icon>
             <span>Medicinas</span>
           </div>
           <ng-container *ngTemplateOutlet="cardBody; context: { $implicit: item, i:i  };"></ng-container>
         </div>
-        <div *ngFor="let item of suitcaseList['documents']; let i=index" class="common-card-body">
+        <div *ngFor="let item of suitcaseShownList['documents']; let i=index" class="common-card-body">
           <div class="card-header card-subsubheader" *ngIf="showSubsubheader('documents', item.name)">
             <mat-icon matSuffix matTooltip="Documentos" [matTooltipPosition]="'below'">description</mat-icon>
             <span>Documentación</span>
           </div>
           <ng-container *ngTemplateOutlet="cardBody; context: { $implicit: item, i:i  };"></ng-container>
         </div>
-        <div *ngFor="let item of suitcaseList['others']; let i=index" class="common-card-body">
+        <div *ngFor="let item of suitcaseShownList['baby']; let i=index" class="common-card-body">
+          <div class="card-header card-subsubheader" *ngIf="showSubsubheader('baby', item.name)">
+            <mat-icon matSuffix matTooltip="Bebé" [matTooltipPosition]="'below'">baby_changing_station</mat-icon>
+            <span>Bebé</span>
+          </div>
+          <ng-container *ngTemplateOutlet="cardBody; context: { $implicit: item, i:i  };"></ng-container>
+        </div>
+        <div *ngFor="let item of suitcaseShownList['pet']; let i=index" class="common-card-body">
+          <div class="card-header card-subsubheader" *ngIf="showSubsubheader('pet', item.name)">
+            <mat-icon matSuffix matTooltip="Mascota" [matTooltipPosition]="'below'">pets</mat-icon>
+            <span>Mascota</span>
+          </div>
+          <ng-container *ngTemplateOutlet="cardBody; context: { $implicit: item, i:i  };"></ng-container>
+        </div>
+        <div *ngFor="let item of suitcaseShownList['others']; let i=index" class="common-card-body">
           <div class="card-header card-subsubheader" *ngIf="showSubsubheader('others', item.name)">Otros</div>
           <ng-container *ngTemplateOutlet="cardBody; context: { $implicit: item, i:i  };"></ng-container>
         </div>
@@ -135,11 +168,11 @@
   <div class="card-body">
     <div class="item"  #suitcase [@showHiddenItem]="item.show ? 'show' : 'hidden'">
       <div class="item-data">
-        <span>{{item.name}}</span>
+        <span class="item-name">{{item.name}}</span>
         <input matInput type="number" [(ngModel)]="item.quantity" class="item-quantity">
       </div>
       <div class="item-actions">
-        <mat-icon aria-hidden="false" aria-label="Discard item" (click)="removeItem(suitcaseList[item.type], i, 'suitcase', viewChildrenSuitcase)">delete_sweep</mat-icon>
+        <mat-icon aria-hidden="false" aria-label="Discard item" (click)="removeItem(suitcaseShownList[item.type], i, 'suitcase', viewChildrenSuitcase, item.type)">delete_sweep</mat-icon>
       </div>
     </div>
   </div>
