--- a/client/src/app/public/home/containers/home/home.component.scss
+++ b/client/src/app/public/home/containers/home/home.component.scss
@@ -25,6 +25,7 @@
 }
 
 
+// ***************************************  ANIMATIONS  ***************************************
 .appearFromBottom {
   display: flex!important;
   animation-name: appearFromBottom;
