--- a/client/src/scss/_variables.scss
+++ b/client/src/scss/_variables.scss
@@ -16,6 +16,7 @@ $text-color: #888888;
 $primary-color: #D88A83;
 $secondary-color: #BA6C65;
 $tertiary-color: #394359;
+$link-color-secondary: #007bff;
 
 
 $black: #242429;
