--- a/client/src/app/public/home/containers/overview/overview.component.html
+++ b/client/src/app/public/home/containers/overview/overview.component.html
@@ -1,4 +1,5 @@
 <div class="container" *ngIf="dataReady">
+  <h2 class="overview-title" id="misMaletas">Mis Maletas</h2>
   <ng-container *ngFor="let suitcase of suitcaseList; let i=index;">
     <ng-container *ngIf="i%2===0;">
       <div class="row">
