--- a/client/src/app/public/home/containers/overview/overview.component.scss
+++ b/client/src/app/public/home/containers/overview/overview.component.scss
@@ -5,6 +5,10 @@
   height: 250px;
 }
 
+.overview-title {
+  color: $primary-color;
+}
+
 .overview-card {
   cursor: pointer;
   margin-bottom: 30px;
