--- a/client/src/app/core/shared/navbar/containers/navbar.component.html
+++ b/client/src/app/core/shared/navbar/containers/navbar.component.html
@@ -2,7 +2,7 @@
   <div class="main_menu">
     <nav class="navbar navbar-expand-lg ">
       <div class="container box_1620">
-        <a class="navbar-brand" href="index.html"><img class ="logo" src="assets/img/logo/logo.png" alt=""></a>
+        <a class="navbar-brand"  [routerLink]="['/public/home']"><img class ="logo" src="assets/img/logo/logo.png" alt=""></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
@@ -11,9 +11,10 @@
 
         <div class="collapse navbar-collapse offset" id="navbarSupportedContent">
           <ul class="nav navbar-nav menu_nav justify-content-end">
-            <li class="nav-item active"><a class="nav-link" href="public/home#misMaletas">Mis Maletas</a></li>
-            <li class="nav-item active"><a class="nav-link" href="public/contact">Contacto</a></li>
-            <li *ngIf="(loginService.logged$ | async)" class="nav-item active" (click)="logout()"><a class="nav-link" href="#">Salir</a></li>
+<!--            <li class="nav-item active" (click)="goTo('public/home', true)"><a class="nav-link">Mis Maletas</a></li>-->
+            <li class="nav-item active" [routerLink]="['/public/home']" [queryParams]="{scroll: true}" [fragment]="(loginService.logged$ | async) ? 'misMaletas' : ''"><a class="nav-link">Mis Maletas</a></li>
+            <li class="nav-item active"><a class="nav-link" [routerLink]="['/public/contact']">Contacto</a></li>
+            <li *ngIf="(loginService.logged$ | async)" class="nav-item active" (click)="logout()"><a class="nav-link">Salir</a></li>
           </ul>
         </div>
       </div>
