fix: issues when errors in login

--- a/client/src/app/public/home/containers/home/max-suitcases-reached-dialog/max-suitcases-reached-dialog.component.html
+++ b/client/src/app/public/home/containers/home/max-suitcases-reached-dialog/max-suitcases-reached-dialog.component.html
@@ -3,5 +3,6 @@
   <p>{{data.content}}</p>
 </mat-dialog-content>
 <mat-dialog-actions align="end">
-  <button mat-button mat-dialog-close="false" color="basic">{{data.confirmButton}}</button>
+  <button *ngIf="data.confirmButton" mat-button mat-dialog-close="false" color="basic">{{data.confirmButton}}</button>
+  <button *ngIf="data.confirmButton" type="reset" mat-button mat-dialog-close="false" color="basic">{{data.errorButton}}</button>
 </mat-dialog-actions>
